<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="diplohack.callswede.RegistrationActivity"
    android:background="@color/colorAccent">
    <include layout="@layout/header"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp">
    <diplohack.callswede.view.customviews.CustomTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Are you"
        android:id="@+id/areyou"
        android:textStyle="bold"
        android:textSize="20sp"
       android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
       />
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/radiogrp"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/areyou"
        >
        <RadioButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/learner_text"
            android:textSize="20sp"
            android:layout_weight="1"
            android:fontFamily="sans-serif"
            android:onClick="onRadioButtonClicked"
            android:theme="@style/SwitchTheme"/>
        <RadioButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/nativespeaker_text"
            android:fontFamily="sans-serif"
            android:textSize="20sp"
            android:layout_weight="1"
            android:layout_gravity="end"
            android:onClick="onRadioButtonClicked"
            android:theme="@style/SwitchTheme"/>

    </RadioGroup>
        <diplohack.callswede.view.customviews.CustomBoldTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Country:"
            android:id="@+id/country_label"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="15dp"
            android:layout_below="@id/radiogrp"/>
        <diplohack.callswede.view.customviews.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/country_default"
            android:id="@+id/country_name"
            android:textSize="20sp"
            android:layout_marginTop="30dp"
            android:layout_toEndOf="@+id/preferred_language"
            android:layout_below="@id/radiogrp"/>
    <diplohack.callswede.view.customviews.CustomBoldTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Default Language:"
        android:id="@+id/preferred_language"
        android:textSize="20sp"
        android:textColor="@android:color/black"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="15dp"
        android:layout_below="@id/country_label"/>
    <diplohack.callswede.view.customviews.CustomTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/language_default"
        android:id="@+id/default_language"
        android:textSize="20sp"
        android:layout_alignTop="@+id/preferred_language"
        android:layout_alignStart="@+id/country_name"/>
    <diplohack.callswede.view.customviews.CustomBoldTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="I speak :"
        android:textColor="@android:color/black"
        android:id="@+id/ispeak_text"
        android:textSize="20sp"
        android:layout_marginTop="30dp"
        android:textStyle="bold"
        android:layout_below="@id/default_language"/>
    <diplohack.callswede.view.MultiSelectionSpinner
        android:id="@+id/language_selection"
        android:layout_below="@+id/ispeak_text"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            >
            <diplohack.callswede.view.customviews.CustomButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_text"
                android:id="@+id/register_button"
                android:layout_marginBottom="45dp"
                android:background="@color/appColor"
                android:textColor="@android:color/white"
                android:layout_centerHorizontal="true"/>
        </RelativeLayout>
    </RelativeLayout>


</LinearLayout>
